Change package.json from JS to JSON

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-native",
     "scroll",
     "scrollview",
-    "mixin",
+    "mixin"
   ],
   "author": "James Ide",
   "license": "MIT",
